# python-librespot

./: Cargo.toml
examples/: play.py
src/: lib.rs  metadata.rs  player.rs  pyfuture.rs  session.rs  webtoken.rs
